# cookiecutter-seatools-starter-python

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: build.bat  pyproject.toml
